--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,3 @@
-/* Tailwind CSS directives */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -70,18 +69,6 @@ body {
   --clr-blue-teritary: #00beff;
   --color-error: #ef4444;
 }
-/* 
-.header {
-  position: relative;
-  z-index: 10;
-  margin-bottom: -5px;
-} */
-
-.crazy-border {
-  width: 100%;
-  height: 70px;
-  object-fit: fill;
-}
 
 .block-section {
   opacity: 1;
@@ -130,7 +117,7 @@ body {
 
 .footer-btn-cnt {
   background: transparent
-    linear-gradient(254deg, #00a8e2 0%, #00beff 23%, #ffffff 100%) 0% 0%
+    linear-gradient(254deg, #00a8e2 0%, #00beff 75%, #ffffff 100%) 0% 0%
     no-repeat padding-box;
   opacity: 1;
 }
@@ -142,16 +129,9 @@ body {
   background-repeat: no-repeat;
   height: 3rem;
 }
-/* .header-desk-logo {
-  background-image: url("/assets/images/logoDesktop.png");
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 5rem;
-} */
+
 input[type="checkbox"] {
-  appearance: none; /* Removes default styling */
+  appearance: none;
   width: 16px;
   height: 16px;
   background-color: gray;
@@ -160,7 +140,7 @@ input[type="checkbox"] {
 }
 
 input[type="checkbox"]:checked {
-  background-color: #000; /* Change background when checked */
+  background-color: #000;
   border-color: #000;
 }
 
@@ -222,153 +202,105 @@ input[type="checkbox"]:checked {
   position: relative;
 }
 
-/* .hey {
-  border-image: url("/assets/images/lightBlueDesk.png");
-} */
-
 .desk-rev-btn {
   background: transparent
-    linear-gradient(240deg, #00a8e2 0%, #00beff 23%, #ffffff 134%) 0% 0%
+    linear-gradient(240deg, #00a8e2 0%, #00beff 63%, #ffffff 134%) 0% 0%
     no-repeat padding-box;
 }
 .dialog-text {
-  background-color: #330040;
+  background-color: black;
+  margin-inline: auto;
+  text-align: text-center;
 }
 .dialog-text > * {
   color: white;
 }
-.fade-slide-up {
-  opacity: 0;
-  transform: translateY(20px);
-  animation: fadeInUp 1s ease-out forwards;
-}
 
-@keyframes fadeInUp {
-  to {
-    opacity: 1;
-    transform: translateY(0);
+@media (max-width: 768px) {
+  .scrolling-container {
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+  }
+
+  .scrolling-image {
+    display: inline-block;
+    position: relative;
+    animation: scroll-left-to-right 10s linear infinite;
   }
 }
-.luxury-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  font-family: "Playfair Display", serif; /* Choose a luxurious font */
-  font-size: 3rem;
-  font-weight: bold;
-  letter-spacing: 0.05em;
-  color: hsl(258, 45%, 25%); /* Luxurious gold color */
-  white-space: nowrap;
-  overflow: hidden;
-}
 
-.luxury-char {
-  opacity: 0;
-  transform: translateY(100%);
-  display: inline-block;
-  animation: unveil 0.8s ease-out forwards;
-}
-
-@keyframes unveil {
+@keyframes scroll-left-to-right {
   0% {
-    opacity: 0;
-    transform: translateY(100%);
+    transform: translateX(-100%);
   }
   100% {
-    opacity: 1;
-    transform: translateY(0);
+    transform: translateX(100%);
   }
 }
 
-.hover-text {
-  display: inline-block;
-  transition: transform 0.3s ease-in-out;
+.scroll-content {
+  animation: scroll 10s linear infinite;
 }
 
-.hover-text:hover {
-  transform: scale(1.1);
-}
-.gradient-text {
-  background: linear-gradient(90deg, #ff0055, #00ffaa, #0099ff);
-  background-size: 200% 200%;
-  -webkit-text-fill-color: transparent;
-  animation: gradientAnimation 3s ease infinite;
+@keyframes scroll {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-50%);
+  }
 }
 
-.throw-in-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+.shady-container {
+  overflow-y: auto;
+  scroll-behavior: smooth;
+  text-align: justify;
+  max-width: 85%;
+  max-height: 38rem;
+  margin-inline: auto;
   position: relative;
-  overflow: hidden;
+  background-color: rgba(0, 0, 0, 1);
 }
 
-.throw-in-text {
-  font-size: 4rem;
-  font-weight: bold;
+.shady-top-effect {
+  width: 100%;
+  height: 6rem;
   position: absolute;
-  opacity: 0;
-  transform: scale(0);
+  z-index: 100;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1) 5%,
+    rgba(0, 0, 0, 0.8) 50%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
-.throw-in-left {
-  animation: throwInFromLeft 1.5s cubic-bezier(0.25, 1, 0.5, 1) forwards;
+.shady-bottom-effect::after {
+  width: 100%;
+  height: 18rem;
+  content: "";
+  position: absolute;
+  z-index: 100;
+  bottom: 0;
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 1) 25%,
+    rgba(0, 0, 0, 0.5) 75%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
-.throw-in-right {
-  animation: throwInFromRight 1.5s cubic-bezier(0.25, 1, 0.5, 1) forwards 0.5s;
+.rev-main-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 4rem;
+  grid-auto-rows: minmax(100px, auto);
 }
 
-.throw-in-top {
-  animation: throwInFromTop 1.5s cubic-bezier(0.25, 1, 0.5, 1) forwards 1s;
-}
-
-.throw-in-bottom {
-  animation: throwInFromBottom 1.5s cubic-bezier(0.25, 1, 0.5, 1) forwards 1.5s;
-}
-
-@keyframes throwInFromLeft {
-  0% {
-    transform: translateX(-100vw) rotate(-720deg) scale(0);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0) rotate(0deg) scale(1);
-    opacity: 1;
-  }
-}
-
-@keyframes throwInFromRight {
-  0% {
-    transform: translateX(100vw) rotate(720deg) scale(0);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0) rotate(0deg) scale(1);
-    opacity: 1;
-  }
-}
-
-@keyframes throwInFromTop {
-  0% {
-    transform: translateY(-100vh) rotate(-720deg) scale(0);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0) rotate(0deg) scale(1);
-    opacity: 1;
-  }
-}
-
-@keyframes throwInFromBottom {
-  0% {
-    transform: translateY(100vh) rotate(720deg) scale(0);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0) rotate(0deg) scale(1);
-    opacity: 1;
-  }
+.rev-box {
+  background-color: black;
+  border: 1px solid #383838;
+  border-radius: 1.5rem;
+  padding: 2rem;
 }
