--- a/src/global.css
+++ b/src/global.css
@@ -130,7 +130,6 @@ h6 {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   opacity: 1;
-  font-stretch: extra-expanded;
 }
 
 .recive-cta {
@@ -338,9 +337,9 @@ input[type="checkbox"]:checked {
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
-  gap: 2rem; /* Adjust the gap between Reviews components */
-  padding: 1rem 0; /* Optional padding around the entire item */
-  height: 100%; /* Each scroll item takes the full height of the container */
+  gap: 2rem;
+  padding: 1rem 0;
+  height: 100%;
 }
 
 @keyframes scroll-track-animation {
